--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-name: Your New Jekyll Site
-description: Blogging about stuffs
-meta_description: "Your New Jekyll Site, Blogging about stuffs"
+name: Mabin Log
+description: Study Site
+meta_description: ""
 
 markdown: kramdown
 highlighter: rouge
